--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,5 @@
-@import url('base/variables.scss');
+@import 'base/variables';
+
 *{
     font-family: 'Museo Sans', sans-serif;
 }
@@ -6,3 +7,5 @@
     max-width: 950px;
     margin: 0 auto;
 }
+@import 'block/promo';
+@import 'block/header.scss';
