--- a/sass/block/_header.scss
+++ b/sass/block/_header.scss
@@ -1,11 +1,43 @@
 .header{
     display: flex;
     justify-content: space-between;
-    justify-content: center;
+    align-content: center;
     &__logo{
         width: 250px;
         img{
             width: 100%;
         }
+    }
+    &__official{
+        font-style: normal;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 12px;
+        text-align: center;
+        color: #FFFFFF;
+        span {
+            display: block;
+            font-size: 18px;
+            line-height: 29px;
+        }
+    }
+    &__phone{
+        display: block;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 18px;
+        align-items: flex-end;
+        text-align: right;
+        color: #FFFFFF;
+        &:hover{
+            color: $white-color;
+            text-decoration: none;
+        }
+    }
+    &__contacts {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
     }
 }
