--- a/sass/block/_buttons.scss
+++ b/sass/block/_buttons.scss
@@ -12,4 +12,12 @@
     text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
+    &_main{
+        width: 300px;
+        height: 50px;
+        font-size: 16px;
+        line-height: 25px;
+        color: $white-color;
+        margin-top: 67px;
+    }
 }
