--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,4 +9,6 @@
 }
 @import 'block/promo';
 @import 'block/header.scss';
-@import 'block/buttons'
+@import 'block/buttons';
+@import 'block/advantages';
+@import 'block/title';
