3-block-form-finish

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,3 +12,6 @@
 @import 'block/buttons';
 @import 'block/advantages';
 @import 'block/title';
+@import 'block/consultation';
+@import 'block/forms';
+@import 'block/media';
