--- a/sass/block/_buttons.scss
+++ b/sass/block/_buttons.scss
@@ -20,4 +20,10 @@
         color: $white-color;
         margin-top: 67px;
     }
+    &_submit {
+        width: 100%;
+        height: 55px;
+        font-size: 16px;
+        color: $white-color;
+    }
 }
