--- a/sass/block/_title.scss
+++ b/sass/block/_title.scss
@@ -4,4 +4,11 @@
     font-size: 30px;
     line-height: 30px;
     color: #0D0D0D;
+    text-transform: uppercase;
+    &_left{
+        text-align: left;
+        font-size: 36px;
+        line-height: 54px;
+        color: $white-color;
+    }
 }
