--- a/sass/block/_media.scss
+++ b/sass/block/_media.scss
@@ -1,23 +1,66 @@
-@media ( max-width: 991px){
+@media ( max-width: 1200px){
     .container{
-        max-width: 800px;
+        max-width: 900px;
     }
 }
+
+@media ( max-width: 992px){
+    .container{
+        max-width: 700px;
+    }
+    .advantages{
+        &__item {
+            max-width: 215px;
+        }
+    }
+}
+
 @media (max-width: 768px){
     .container{
-        max-width: 685px;
+        max-width: 541px;
     }
     .promo{
+        padding: 21px 0 25px 0;
+        &__header {
+            font-size: 35px;
+        }
+        &__subheader{
+            margin-top: 13px;
+            font-size: 20px;
+        }
         &__wrapper{
             align-items: center;
+        }
+        .header {
+            &__logo{
+                width: 200px;
+            }
+            &__official {
+                font-size: 11px;
+                span {
+                    font-size: 14px;
+                }
+            }
+            &__phone {
+                font-size: 16px;
+            }
+        }
+        &__link {
+            font-size: 15px;
         }
     }
     .advantages{
         &__item{
             max-width: 210px;
+            margin-top: 30px;
         }
         &__descr{
             font-size: 13px;
+        }
+        &__wrapper {
+            flex-direction: column;
+            margin-top: 20px;
+            align-items: center;
         }
     }
     .consultation{
@@ -28,7 +71,7 @@
         }
         .title_left{
             text-align: center;
-            font-size: 30px;
+            font-size: 24px;
         }
         .feed-form{
             margin: 0 auto;
@@ -54,16 +97,19 @@
             }
         }
         &__header{
-            font-size: 40px;
+            font-size: 35px;
         }
         &__subheader{
-            font-size: 21px;
+            font-size: 18px;
         }
         .button_main{
             height: 55px;
         }
         &__link{
             font-size: 14px;
+        }
+        &__icons {
+            justify-content: space-around;
         }
     }
     .advantages{
@@ -80,7 +126,7 @@
             }
         }
         .title{
-            font-size: 28px;
+            font-size: 24px;
         }
         &__subtitle{
             margin-top: 20px;
@@ -93,11 +139,95 @@
         }
     }
     .consultation{
+        padding: 62px 0 62px 0;
+        min-height: 565px;
         .title_left{
-            font-size: 24px;
+            font-size: 19px;
+            line-height: 37px;
         }
         &__descr{
+            font-size: 15px;
+        }
+    }
+}
+@media (max-width: 425px){
+    .container {
+        max-width: 300px;
+    }
+    .promo {
+        min-height: 580px;
+        .header {
+            &__logo {
+                img {
+                    width: 88%;
+                    margin-top: 12px;
+                }
+            }
+            &__phone {
+                font-size: 14px;
+            }
+            .button {
+                width: 122px;
+                font-size: 11px;
+            }
+        }
+        &__header {
+            font-size: 24px;
+        }
+        &__subheader {
+            font-size: 12px;
+            margin-top: -9px;
+
+        }
+        .button_main {
+            height: 45px;
+            width: 245px;
+            font-size: 13px;
+        }
+        &__link {
+            margin-top: 7px;
+            font-size: 12px;
+        }
+        
+        &__icons {
+            width: 315px;
+        }
+        &__icon {
+            font-size: 12px;
+        }
+    }
+    .advantages{
+        .title {
             font-size: 20px;
+        }
+        &__subtitle{
+            font-size: 18px;
+        }
+        &__descr {
+            font-size: 13px;
+        }
+    }
+    .consultation {
+        padding: 40px 0 29px 0;
+        min-height: 515px;
+        .title_left {
+            font-size: 13px;
+        }
+        &__descr {
+            color: #afafaf;
+            font-size: 13px;
+            margin-top: 0;
+            line-height: 19px;
+        }
+        .feed-form {
+            width: 250px;
+        }
+        .button_submit {
+            height: 45px;
+            font-size: 13px;
+        }
+        input {
+            font-size: 13px;
         }
     }
 }
