--- a/sass/block/_buttons.scss
+++ b/sass/block/_buttons.scss
@@ -12,6 +12,9 @@
     text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
+    &:active {
+        opacity: 0.8;
+    }
     &_main{
         width: 300px;
         height: 50px;
@@ -25,5 +28,18 @@
         height: 55px;
         font-size: 16px;
         color: $white-color;
+    }
+    &_mini {
+        width: 131px;
+        height: 40px;
+        background: #C70101;
+        border: none;
+        border-radius: 6px;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 22px;
+        text-transform: uppercase;
+        color: #FFFFFF;
     }
 }
