--- a/sass/block/_forms.scss
+++ b/sass/block/_forms.scss
@@ -17,4 +17,17 @@
             margin-bottom: 20px;
         }
     }
+    &_mt25 {
+        margin-top: 25px;
+    }
+    .error {
+        border: 1px solid red;
+    }
+    label.error {
+        border: none;
+        text-align: center;
+        margin-bottom: 10px;
+        font-size: 13px;
+        color: white;
+    }
 }
