--- a/scss/libs/_fonts.scss
+++ b/scss/libs/_fonts.scss
@@ -2,6 +2,7 @@
 
 @font-face {
 	font-family: 'Museo Sans Cyrl 500';
+	font-display: swap;
 	src: url('MuseoSansCyrl-500.eot');
 	src: local('MuseoSansCyrl-500'),
 		url('MuseoSansCyrl-500.eot?#iefix') format('embedded-opentype'),
@@ -14,6 +15,7 @@
 
 @font-face {
 	font-family: 'Museo Sans Cyrl 900';
+	font-display: swap;
 	src: url('MuseoSansCyrl-900.eot');
 	src: local('MuseoSansCyrl-900'),
 		url('MuseoSansCyrl-900.eot?#iefix') format('embedded-opentype'),
@@ -25,6 +27,7 @@
 
 @font-face {
 	font-family: 'Museo Sans Cyrl 700';
+	font-display: swap;
 	src: url('MuseoSansCyrl-700.eot');
 	src: local('MuseoSansCyrl-700'),
 		url('MuseoSansCyrl-700.eot?#iefix') format('embedded-opentype'),
@@ -37,6 +40,7 @@
 
 @font-face {
 	font-family: 'Museo Sans Cyrl 300';
+	font-display: swap;
 	src: url('MuseoSansCyrl-300.eot');
 	src: local('MuseoSansCyrl-300'),
 		url('MuseoSansCyrl-300.eot?#iefix') format('embedded-opentype'),
@@ -48,6 +52,7 @@
 
 @font-face {
 	font-family: 'Museo Sans Cyrl 100';
+	font-display: swap;
 	src: url('MuseoSansCyrl-100.eot');
 	src: local('MuseoSansCyrl-100'),
 		url('MuseoSansCyrl-100.eot?#iefix') format('embedded-opentype'),
